--- a/angular.json
+++ b/angular.json
@@ -63,6 +63,13 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "ssl": true,
+            "sslKey": "ssl.key",
+            "sslCert": "ssl.crt",
+            "port": 4200,
+            "host": "localhost"
+          },
           "configurations": {
             "production": {
               "buildTarget": "mw-b2c:build:production"
