--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/postcss": "^4.1.4",
     "bcrypt": "^5.1.1",
     "firebase": "^11.9.0",
+    "ngx-image-cropper": "^9.1.5",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.4",
